--- a/damagecontrol/app/views/project/_project.rhtml
+++ b/damagecontrol/app/views/project/_project.rhtml
@@ -5,7 +5,7 @@ var project_name_page_tip = "<div class='tp1'>The project name should not use sp
 var build_command_tip = "<div class='tp1'>The command-line that will execute the build.</div>";
 var project_description_tip = "<div class='tp1'>A short description of the project. Will be used in various notifications such as RSS.</div>";
 var project_home_page_tip = "<div class='tp1'>URL to the project's home page or documentation.</div>";
-var project_start_time_tip = "<div class='tp1'>Date from which changesets will be retrieved.</div>";
+var project_start_time_tip = "<div class='tp1'>Date from which revisions will be retrieved.</div>";
 -->
 </script>
 
