--- a/damagecontrol/app/views/project/index.rhtml
+++ b/damagecontrol/app/views/project/index.rhtml
@@ -10,14 +10,14 @@
     <td align="left">
       <% 
         img = "/images/grey-16.gif"
-        build = project.latest_changeset ? project.latest_changeset.latest_build : nil
+        build = project.latest_revision ? project.latest_revision.latest_build : nil
         if(build)
           img = build.small_image
         end
       %>
       <%= tag("img", :src => img) %>
     </td>
-    <td align="left"><%= link_to_image("rss.gif", :action => "changesets_rss", :id => project.name) %></td>
+    <td align="left"><%= link_to_image("rss.gif", :action => "revisions_rss", :id => project.name) %></td>
   </tr>
 <% end %>
 </table>
