--- a/trunk/damagecontrol/app/views/project/view.rhtml
+++ b/trunk/damagecontrol/app/views/project/view.rhtml
@@ -45,7 +45,7 @@ Publishers give feedback of the results of a build. Publishers run after a build
 </div>
 
 <div id="trackers" style="display:none">
-For every changeset, DamageControl looks for issue/bug numbers in the changeset messages. 
+For every revision, DamageControl looks for issue/bug numbers in the revision messages. 
 If it finds an issue number, it creates a link to the external issue tracker.
 
 By specifying an issue tracker, you're giving DamageControl a hint about the format of the bugs to
