--- a/trunk/damagecontrol/app/views/project/_project.rhtml
+++ b/trunk/damagecontrol/app/views/project/_project.rhtml
@@ -37,33 +37,13 @@ var project_start_time_tip = "<div class='tp1'>Date from which revisions will be
   <td><%= tip(:txt => 'project_start_time_tip') %></td>
   <td><%= calendar(:name => "DamageControl::Project[@start_time]", :time => project.start_time ? project.start_time : Time.new.utc) %></td>
 </tr>
-<tr>
-  <td>Dependencies</td>
-  <td>&nbsp;</td>
-  <td>
-  <% @projects.each do |project| 
-	  		depends_indirectly_on = @project.depends_indirectly_on?(project)
-	  		depends_directly_on = @project.depends_directly_on?(project)
-
-	  		other_depends_on = project.depends_on?(@project)
-	  		warning = ""
-	  		if(depends_indirectly_on && !depends_directly_on)
-	  			warning = " (we dependend on this indirectly)"
-	  		end
-	  		if(other_depends_on)
-	  			warning = " (dependends on us directly or indirectly)"
-	  		end
-
-  			if(@project != project)
-	  	%>
-  			<br>
-  				<%= check_box_tag("dependencies[]", project.name, depends_directly_on, {"disabled" => other_depends_on}) %> 
-  				<%= link_to(project.name, :action => "view", :id => project.name) %><%= warning %>
-  			</br>
-	  <% end %>
-  <% end %>
-  </td>
-</tr>
 </table>
 
-<img src="<%= url_for(:controller => "dependency", :action => "graph") %>"/>
+<div id="dependency_graph">
+<%= link_to_remote(
+	"Show project dependencies", 
+	:update => "dependency_graph",
+	:url => {:controller => "dependency", :action => "image_map_html"}
+	)
+%>
+</div>
