--- a/trunk/damagecontrol/app/views/project/revision.rhtml
+++ b/trunk/damagecontrol/app/views/project/revision.rhtml
@@ -1,12 +1,14 @@
+<h1><%= @revision.project.name %> revision <%= @revision.identifier %></h1>
+<div id="request_build">
 <%= link_to_remote(
 	"Trigger build for this revision",
 	:update => "request_build",
 	:url => {:controller => "build", :action => "request_build", :id => @revision.project.name, :params => {"revision" => @revision.identifier, "reason" => "Manually triggered via web interface"}}
 ) %>
-<div id="request_build"></div>
+</div>
 
 <ul class="foldertab">
-  <li><a href="javascript:setTab('revisions')"><img src="/images/16x16/document_exfile.png"> Changesets</a></li>
+  <li><a href="javascript:setTab('revisions')"><img src="/images/16x16/document_exfile.png"> Changes</a></li>
   <% @revision.builds.each do |build| %>
   <li><%= link_to(build.identifier, 
           :controller => "build", :action => "status", :id => @project.name, :params => 
