--- a/trunk/damagecontrol/app/views/layouts/default.rhtml
+++ b/trunk/damagecontrol/app/views/layouts/default.rhtml
@@ -15,9 +15,9 @@
 			"prototype",
 			"toggle_div",
 			"dateFormat",
-			"jscalendar/calendar",
-			"jscalendar/calendar-setup.js",		
-			"jscalendar/lang/calendar-en.js"
+			"/javascripts/jscalendar/calendar",
+			"/javascripts/jscalendar/calendar-setup.js",		
+			"/javascripts/jscalendar/lang/calendar-en.js"
 		)
 	%>
 	<script type="text/javascript">
