Added route for build_request so it can be used more easily from curl. Example:
curl http://localhost:3000/projects/CIA/revisions/1143/request_build?reason=just+because+i+wanted+to

Made code robust to support bogus build requests

--- a/damagecontrol/app/views/layouts/default.rhtml
+++ b/damagecontrol/app/views/layouts/default.rhtml
@@ -15,9 +15,9 @@
 			"prototype",
 			"toggle_div",
 			"dateFormat",
-			"jscalendar/calendar",
-			"jscalendar/calendar-setup.js",		
-			"jscalendar/lang/calendar-en.js"
+			"/javascripts/jscalendar/calendar",
+			"/javascripts/jscalendar/calendar-setup.js",		
+			"/javascripts/jscalendar/lang/calendar-en.js"
 		)
 	%>
 	<script type="text/javascript">
