--- a/damagecontrol/app/views/project/_project.rhtml
+++ b/damagecontrol/app/views/project/_project.rhtml
@@ -35,15 +35,28 @@ var project_start_time_tip = "<div class='tp1'>Date from which revisions will be
 <tr>
   <td>Start date</td>
   <td><%= tip(:txt => 'project_start_time_tip') %></td>
-  <td><%= calendar(:name => "DamageControl::Project[@start_time]", :time => project.start_time ? project.start_time : Time.new.utc) %></td>
+  <td>
+    <table>
+      <tr>
+        <td><%= calendar(:name => "DamageControl::Project[@start_time]", :time => project.start_time ? project.start_time : Time.new.utc) %></td>
+      </tr>
+    </table>
+  </td>
 </tr>
 </table>
 
-<div id="dependency_graph">
+<% if(!@new_project) %>
+<div style="display:none;" id="dependency_graph_spinner"><%= image_tag("spinner.gif") %> Loading dependency graph...</div>
+<div style="display:none;" id="dependency_graph_tip">Click projects to add/remove <%= project.name %>'s dependencies</div>
+<div id="dependency_graph_link">
 <%= link_to_remote(
 	"Show project dependencies", 
 	:update => "dependency_graph",
+  :loading => "Element.hide('dependency_graph_link');Element.show('dependency_graph_spinner')",
+	:loaded => "Element.hide('dependency_graph_spinner');Element.show('dependency_graph_tip')",
 	:url => {:controller => "dependency", :action => "image_map_html", :id => project.name}
 	)
 %>
 </div>
+<div id="dependency_graph"></div>
+<% end %>
