--- a/damagecontrol/app/views/project/_project.rhtml
+++ b/damagecontrol/app/views/project/_project.rhtml
@@ -50,11 +50,11 @@ var project_start_time_tip = "<div class='tp1'>Date from which revisions will be
 <div style="display:none;" id="dependency_graph_tip">Click projects to add/remove <%= project.name %>'s dependencies</div>
 <div id="dependency_graph_link">
 <%= link_to_remote(
-	"Show project dependencies", 
+	"#{@edit ? 'Edit' : 'Show'} project dependencies", 
 	:update => "dependency_graph",
   :loading => "Element.hide('dependency_graph_link');Element.show('dependency_graph_spinner')",
 	:loaded => "Element.hide('dependency_graph_spinner');Element.show('dependency_graph_tip')",
-	:url => {:controller => "dependency", :action => "image_map_html", :id => project.name}
+	:url => {:controller => "dependency", :action => "image_map_html", :id => project.name, :params => {"edit" => @edit}}
 	)
 %>
 </div>
