--- a/damagecontrol/app/views/project/view.rhtml
+++ b/damagecontrol/app/views/project/view.rhtml
@@ -13,10 +13,10 @@ tabs = ["projects", "scms", "publishers", "trackers"]
 </script>
 
 <ul class="foldertab">
-  <li><a id="projects-tab" href="javascript:setTab('projects')"><img src="/images/24x24/wrench.png" alt=""/> General</a></li>
-  <li><a id="scms-tab" href="javascript:setTab('scms')"><img src="/images/24x24/safe.png" alt=""/> Source Control</a></li>
-  <li><a id="publishers-tab" href="javascript:setTab('publishers')"><img src="/images/24x24/megaphone.png" alt=""/> Publishers</a></li>
-  <li><a id="trackers-tab" href="javascript:setTab('trackers')"><img src="/images/24x24/scroll_information.png" alt=""/> Issue Tracker</a></li>
+  <li><a id="projects-tab" href="javascript:setTab('projects')"><%= image_tag "/images/24x24/wrench.png", :size => "24x24" %> General</a></li>
+  <li><a id="scms-tab" href="javascript:setTab('scms')"><%= image_tag "/images/24x24/safe.png", :size => "24x24" %> Source Control</a></li>
+  <li><a id="publishers-tab" href="javascript:setTab('publishers')"><%= image_tag "/images/24x24/megaphone.png", :size => "24x24" %> Publishers</a></li>
+  <li><a id="trackers-tab" href="javascript:setTab('trackers')"><%= image_tag "/images/24x24/scroll_information.png", :size => "24x24" %> Issue Tracker</a></li>
 </ul>
 
 <% if(@edit) %>
