--- a/app/views/project/index.rhtml
+++ b/app/views/project/index.rhtml
@@ -9,7 +9,7 @@
   <tbody>
   <% @projects.each do |project| %>
     <tr>
-      <td align="left"><%= link_to(project.name, {:controller => "project", :action => "view", :id => project.id}) %></td>
+      <td align="left"><%= link_to(project.name, {:controller => "project", :action => "show", :id => project.id}) %></td>
       <td align="left">
       <% 
         img = "/images/grey-16.gif"
