--- a/app/views/revision/list.rhtml
+++ b/app/views/revision/list.rhtml
@@ -1,60 +1,15 @@
-<table class="pane">
-
-<%
-  if @linkable_revisions.nil?
-%>
-<%
-  elsif @linkable_revisions.empty?
-%>
-  <tr class="pane">
-    <td class="pane">
-      No revisions
-    </td>
-  </tr>
-<% else %>
-  <%
-    @linkable_revisions.reverse.each do |revision|
-  %>
-  <tr class="build-row">
+<table>
+<% @revisions.each do |revision| %>
+  <tr>
     <td nowrap="nowrap">
-      <%= link_to("#{revision.identifier} (#{revision.developer})", :action => "revision", :id => @project.name, :params => {"revision" => revision.identifier}) %>
+      <%= link_to(revision.identifier, :controller => "revision", :action => "show", :id => revision.id) %>
     </td>
     <td width="100%">
-      <% @project.revision(revision.identifier).builds.each do |build| %>
-        <%= link_to_image(
-              build.small_image, 
-              {
-                :controller => "build", 
-                :action => "status", 
-                :id => @project.name, 
-                :params => {"revision" => revision.identifier, "build" => build.identifier}
-              }
-            ) %>
+      <% revision.builds.each do |build| %>
+        <%= link_to(image_tag(build.small_image, :border => 0), "http://www.example.com") %>
       <% end %>
     </td>
   </tr>
-  <% end %>
-
-  <% if(!@select_revision_identifiers.empty?) %>
-    <tr class="build-row">
-      <td class="build-cell-even">
-        <form method="get" action="<%= url_for(:action => "revision", :id => @project.name) %>">
-          <input type="hidden" name="project_name" value="<%= "bar" %>" />
-          <select name="revision" onchange="submit()">
-          
-          <%
-            @select_revision_identifiers.reverse.each do |revision_identifier|
-          %>
-            <option value="<%= revision_identifier %>"><%= revision_identifier %></option>      
-          <% end %>
-          
-          </select>
-        </form>
-      </td>
-    </tr>
-  <% end %>
-
 <% end %>
-
 </table>
 
