--- a/app/views/project/index.rhtml
+++ b/app/views/project/index.rhtml
@@ -1,28 +1,1 @@
-<table>
-  <thead>
-    <tr>
-      <th align="left">Project</th>
-      <th align="left">Latest Build</th>
-      <th align="left">Changeset RSS</th>
-    </tr>
-  </thead>
-  <tbody>
-  <% @projects.each do |project| %>
-    <tr>
-      <td align="left"><%= link_to(project.name, {:controller => "project", :action => "show", :id => project.id}) %></td>
-      <td align="left">
-      <% 
-        img = "/images/grey-16.gif"
-        latest_revision = project.revisions[-1]
-        build = latest_revision ? latest_revision.builds[-1] : nil
-        if(build)
-          img = build.small_image
-        end
-      %>
-      <%= tag("img", :src => img) %>
-      </td>
-      <td align="left"><%= link_to_image("rss.gif", {:action => "revisions_rss", :id => project.name}, {"title" => "#{project.name} RSS feed"}) %></td>
-    </tr>
-<% end %>
-  <tbody>
-</table>
+<h1>Welcome to DamageControl</h1>
